@@ -31,7 +31,7 @@ using namespace OSCADA;
 TController::TController( const string &id_c, const string &daq_db, TElem *cfgelem ) :
     TConfig(cfgelem), enSt(false), runSt(false),
     mId(cfg("ID")), mMessLev(cfg("MESS_LEV")), mAEn(cfg("ENABLE").getBd()), mAStart(cfg("START").getBd()),
-    mDB(daq_db), mRedntSt(dataRes()), mRedntUse(false)
+    mDB(daq_db), mRedntSt(dataRes()), mRedntUse(true)
 {
     mId = id_c;
     mPrm = grpAdd("prm_");
@@ -155,6 +155,8 @@ void TController::load_( )
     cfgViewAll(true);
     SYS->db().at().dataGet(fullDB(),owner().nodePath()+"DAQ",*this);
 
+    mRedntUse = owner().redntAllow() && (bool)redntMode();
+
     LoadParmCfg();
 
     if(!enSt && enSt_prev)	enable();
@@ -205,8 +207,6 @@ void TController::enable( )
 
 	//Enable for children
 	enable_();
-
-	mRedntUse = owner().redntAllow() && (bool)redntMode();
     }
 
     bool enErr = false;
