@@ -1,3 +1,13 @@
+2016-04-25 Roman
+- DAQ: Initialization of redundancy of TController object some changed to enabled by default. That will next checked into a complex environment.
+- DAQ.BCM2835: Expanded for access to GPIO by static functions which significant faster ones.
+- FIX:DAQ.JavaLikeCalc: setNoTransl() at the attributes value (DB field "DEF") loading disabled by some problematic and no a sence.
+- Special.FLibSYS: The time functions are appended by tmSleep() for faster access to the short sleeping provides.
+- Transport.{SSL,Sockets}: Buffer's size of getservbyname() some decreased.
+- FIX:UI.QTCfg: Read only of selected items are fixed in alignment with other items in single row.
+    Changed user apply is fixed.
+
+
 2016-04-20 Roman
 - DB.LibsDB.OscadaLibs.db: Templates base.{digAlarm,anUnif,anUnifSign} expanded by prevent main execution into cycles
     of the starting (f_start) and stoping (f_stop). Template base.anUnifSign also expanded for EVAL detection lag into parameter "Tf".
@@ -69,7 +79,7 @@
 
 2016-04-01 Roman
 - FIX:DB.{SQLite,MySQL,PostgreSQL,FireBird}: Previous scaned value getting prevented on the original value setting to clear all extended structure of translated value.
-    Detected on UI,VCAEngine users attributes seek.
+    Detected on UI.VCAEngine users attributes seek.
 - Protocol.SelfSystem: Attribute "remoteSrcAddr" of the root node set/reserve to the remoted host's address.
 - FIX:UI.VCAEngine: Mostly information messages from information level moved to debug.
     User API functions mess{Debug,Info,Note,Warning,Err,Crit,Alert,Emerg}() appended to the run-time widget and included the widget path as category.
